Bug 350236 - Invalid sql code on postgresql export of entity attributes using auto increment
Summary: Invalid sql code on postgresql export of entity attributes using auto increment
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-15 10:00 UTC by Ralf Habacker
Modified: 2015-07-20 07:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.16.80 (KDE Applications 15.07.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-07-15 10:00:16 UTC
The postgresql export of entitiy attributes with the auto increment enabled creates an invalid sql statement.



Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add an entity and an attribute with auto increment enabled
3. select postgresql export
4. generate entity

Actual Results:  
The generated statement is 

ALTER TABLE <table_name> ALTER COLUMN <field_name> SET NOT NULL

The statement is not terminated with a ';'


Expected Results:  
The statement should be terminated with a ';'


The bug has been introduced with KDE version 3.91.0 (commit a20c9650e1e6b204b4e9139030f40497def576c8)
Comment 1 Ralf Habacker 2015-07-15 10:06:12 UTC
Git commit 7ee60f9eb9fcbd7a0583a1a743a0f3728a5e3691 by Ralf Habacker.
Committed on 15/07/2015 at 10:05.
Pushed by habacker into branch 'master'.

Fix 'Invalid sql code on postgresql export of entity attributes using auto increment'.
FIXED-IN:2.16.80 (KDE Applications 15.07.80)

M  +1    -1    umbrello/codegenerators/sql/postgresqlwriter.cpp

http://commits.kde.org/umbrello/7ee60f9eb9fcbd7a0583a1a743a0f3728a5e3691