Fix 'Invalid sql code on postgresql export of entity attributes using auto increment'.

BUG:350236
FIXED-IN:2.16.80 (KDE Applications 15.07.80)